# react-native-sodium-jsi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.sh  package.json  react-native-sodium-jsi.podspec  react-native-sodium.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativesodium/: SodiumModule.java  SodiumPackage.java
android/src/main/java/org/libsodium/rn/: RCTSodiumModule.java
cpp/: sodium-jsi.cpp  sodium-jsi.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/debug/java/com/example/reactnativesodium/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativesodium/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/SodiumExample/: AppDelegate.m  Info.plist
example/ios/SodiumExample.xcodeproj/: project.pbxproj
example/ios/SodiumExample.xcodeproj/xcshareddata/xcschemes/: SodiumExample.xcscheme
example/ios/SodiumExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: RCTSodium.h  RCTSodium.mm
ios/Sodium.xcodeproj/: project.pbxproj
src/: index.ts  index.tsx
